@@ -243,3 +243,34 @@ div.imglsocbookmark a:hover img {
 	filter: alpha(opacity=100);
 }
 /* end bd */
+
+/* Tooltip box */
+.caption-text img {
+	float: right;
+	padding-top: 2px;
+}
+
+span.helptext {
+	position: absolute;
+	right: 50px;
+	z-index: 9000;
+	background-color: #000;
+	border: 1px solid #000;
+	border-radius: 6px;
+	padding: 5px 10px;
+	width: 200px;
+	display: none;
+	color: #FFF;
+	text-align: left;
+	font-size: 11px;
+	font-weight: normal;
+	/* outline radius for mozilla/firefox only */
+	outline-radius: 4px;
+	-moz-outline-radius: 4px;
+	-webkit-outline-radius: 4px;
+	/* opacity for tooltip box */
+	filter: alpha(opacity=70);
+	-moz-opacity: 0.75;
+	-khtml-opacity: 0.75;
+	opacity: 0.75;
+}
